# Todolist

./: .gitignore  pyproject.toml
backend/: pyproject.toml
backend/src/: main.py
backend/src/auth/: __init__.py  crud.py  decorator.py  models.py  routers.py  schemas.py  security.py
backend/src/auth/services/: user_service.py
backend/src/todos/: crud.py  models.py  routers.py  schemas.py  services.py
frontend/: pubspec.yaml
frontend/lib/: main.dart
frontend/lib/config/: colors.dart
frontend/lib/helpers/: auth_helper.dart  parse_jwt.dart
frontend/lib/models/: todo.dart  user.dart
frontend/lib/services/: login_service.dart  todo_api_service.dart
frontend/lib/viewmodels/: login_view_model.dart  todo_view_model.dart
frontend/lib/views/: auth_wrapper.dart  home_view.dart  login_view.dart
frontend/lib/widgets/buttons/: _button_renderer.dart  filled_button.dart  submit_button.dart
frontend/lib/widgets/login/: login_form.dart
src/: database.py  main.py  middleware.py
src/auth/: decorator.py  dependencies.py  models.py  routers.py  security.py
src/auth/services/: user_service.py
src/todos/: crud.py  models.py  routers.py  schemas.py  services.py
